--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -9,9 +9,18 @@
   font-size: 56px;
   font-weight: 400;
 }
+
 .complex-solutions-block__left-descr {
   font-size: 16px;
   color: #6a757c;
   margin-top: 24px;
   margin-bottom: 48px;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  margin: 0 auto;
+  justify-content: space-between;
 }
