--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -24,7 +24,12 @@
   margin: 0 auto;
   justify-content: space-between;
 }
-
+.success-projects {
+  background: #F7F7F7;
+}
+.no-bg {
+  background: #fff;
+}
 .success-projects-container {
   display: flex;
   justify-content: center;
