--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -201,5 +201,8 @@
     .slider-item, .slider-out-images .slider-item {
         width: 100%;
     }
+    .slider-item {
+        flex: none;
+    }
     
 }
