--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,59 +1,31 @@
-.complex-solutions-block {
+.hero-wrapper {
+	padding: 3rem 0 5rem;
+}
+
+.hero-block {
 	display: flex;
 	flex-direction: row;
-	margin-top: 24px;
 	justify-content: space-between;
 }
 
-.complex-solutions-block__left-title {
+.hero-block__left-title {
 	font-size: 56px;
 	font-weight: 400;
 }
 
-.complex-solutions-block__left-descr {
+.hero-block__left-descr {
 	font-size: 16px;
 	color: #6a757c;
 	margin-top: 24px;
 	margin-bottom: 48px;
 }
 
-.cards {
+.hero-cards {
 	display: flex;
 	flex-direction: row;
 	gap: 24px;
 	margin: 0 auto;
 	justify-content: space-between;
-}
-
-.success-projects {
-	background: #f7f7f7;
-}
-
-.success-projects-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-
-.success-projects-container__title {
-	margin-top: 24px;
-	font-size: 48px;
-	font-weight: 400;
-}
-
-.success-projects-container__descr {
-	font-size: 16px;
-	color: #6a757c;
-	margin-top: 24px;
-	text-align: center;
-}
-
-.success-projects .action-button {
-	width: 73px;
-	height: 30px;
-	padding: 4px 12px;
-	margin-top: 120px;
 }
 
 @media (max-width: 768px) {
@@ -66,14 +38,14 @@
 }
 
 @media (max-width: 485px) {
-	.complex-solutions-block {
+	.hero-block {
 		flex-direction: column;
 	}
-	.cards {
+	.hero-cards {
 		flex-direction: row;
 		flex-wrap: wrap;
 	}
-	.complex-solutions-block__left-title {
+	.hero-block__left-title {
 		font-size: 44px;
 	}
 }
