--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,9 +4,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 4rem 0;
 }
 .footer-block {
-    margin-top: 64px;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #FFFFFF26;
@@ -35,7 +35,7 @@
     letter-spacing: -2%;
 }
 
-.footer-container span {
+.footer-policy {
     margin-top: 48px;
     font-size: 14px;
     font-weight: 400;
