--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -44,7 +44,11 @@
     text-align: left;
     width: 1024px;
 }
-
+@media(max-width: 1024px) {
+    .footer-policy {
+        width: 100%;
+    }
+}
 @media(max-width:485px) {
     .footer-block {
         flex-direction: column;
@@ -53,5 +57,7 @@
     .footer-container span, .action-button, .footer-policy {
         width: 100%;
     }
-    
+    .container-header__title {
+        font-size: 39px;
+    }
 }
