--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -248,3 +248,13 @@
     }
     
 }
+
+@media(max-width: 320px) {
+    .slider-progress {
+        flex-wrap: wrap;
+        gap: .7rem;
+    }
+    .slider-out-images .slider-track {
+        gap: 0;
+    }
+}
